@@ -47,6 +47,7 @@ use NewsExtractor::SiteSpecificExtractor::newtalk_tw;
 use NewsExtractor::SiteSpecificExtractor::www_digitimes_com_tw;
 use NewsExtractor::SiteSpecificExtractor::www_ustv_com_tw;
 use NewsExtractor::SiteSpecificExtractor::www_mdnkids_com;
+use NewsExtractor::SiteSpecificExtractor::www_nownews_com;
 use NewsExtractor::SiteSpecificExtractor::UDN;
 use NewsExtractor::SiteSpecificExtractor::ETtoday;
 use NewsExtractor::SiteSpecificExtractor::ChinaTimes;
@@ -113,6 +114,7 @@ use constant {
         'newtalk.tw' => 'NewsExtractor::SiteSpecificExtractor::newtalk_tw',
         'www.digitimes.com.tw' => 'NewsExtractor::SiteSpecificExtractor::www_digitimes_com_tw',
         'www.mdnkids.com' => 'NewsExtractor::SiteSpecificExtractor::www_mdnkids_com',
+        'www.nownews.com' => 'NewsExtractor::SiteSpecificExtractor::www_nownews_com',
     },
     CSSRuleSetByHost => {
         'www.cw.com.tw' => {
@@ -132,12 +134,6 @@ use constant {
             dateline   => '.authors time.article-content__time',
             journalist => '.authors span.article-content__author',
             content_text => 'div.article-content__paragraph section.article-content__editor',
-        },
-        'www.nownews.com' => {
-            headline   => 'h1.entry-title',
-            dateline   => 'span.td-post-date:nth-child(2) > time:nth-child(1)',
-            journalist => '.td-post-author-name',
-            content_text => '.td-post-content > span[itemprop=articleBody]',
         },
         'www.enewstw.com' =>  {
             headline     => 'td.blog_title > strong',
