@@ -1,3 +1,4 @@
+  - Add a site-specific extractor for www.nownews.com
   - Add a site-specific extractor for www.mdnkids.com
   - Add a site-specific extractor for www.ustv.com.tw
 
